// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOCX golden snapshots > stabilan rezultat: fer-diplomski-uskladjen.docx 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Times New Roman (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 1,
      "max": 6,
      "status": "fail",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1. sekcija: left 2.50 cm",
      "earned": 4.5,
      "max": 6,
      "status": "warn",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve očitane sekcije koriste A4 ili veličina nije eksplicitno zapisana",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Sadržaj ili TOC polje je pronađeno",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "FPZG autor–godina: ručna završna provjera potrebna",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Automatizacija citatnog stila",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": null,
      "severity": "info",
      "title": "Djelomično potvrđeni profil",
      "where": "Odabrani profil",
    },
    {
      "category": "formatting",
      "detail": "1. sekcija: left 2.50 cm",
      "severity": "warning",
      "title": "Margine nisu jednake očekivanim postavkama",
      "where": "Postavke stranice",
    },
    {
      "category": "citations",
      "detail": "Za stil FPZG autor–godina citatnice i literaturu treba dodatno ručno pregledati.",
      "severity": "info",
      "title": "Odabrani citatni stil nije u potpunosti automatiziran",
      "where": "Citatni profil",
    },
    {
      "category": "formatting",
      "detail": "Dominantni prored je 1.50, a očekuje se 1.2.",
      "severity": "error",
      "title": "Prored nije usklađen s profilom",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
  ],
  "profile": "Fakultet elektrotehnike i racunarstva, diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "partial",
  "score": 87,
  "stats": {
    "characters": 59999,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 160,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 9090,
  },
}
`;

exports[`DOCX golden snapshots > stabilan rezultat: ffzg-filozofija-diplomski.docx 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Times New Roman (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve 1 sekcije približno odgovaraju profilu",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Nije prepoznato: Naslovna stranica",
      "earned": 6,
      "max": 7,
      "status": "warn",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "FPZG autor–godina: ručna završna provjera potrebna",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Automatizacija citatnog stila",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": null,
      "severity": "info",
      "title": "Djelomično potvrđeni profil",
      "where": "Odabrani profil",
    },
    {
      "category": "citations",
      "detail": "Za stil FPZG autor–godina citatnice i literaturu treba dodatno ručno pregledati.",
      "severity": "info",
      "title": "Odabrani citatni stil nije u potpunosti automatiziran",
      "where": "Citatni profil",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Naslovna stranica",
      "severity": "warning",
      "title": "Nedostaju mogući obvezni dijelovi verificiranog profila",
      "where": "Struktura rada",
    },
  ],
  "profile": "Filozofski fakultet (Odsjek za filozofiju), diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "partial",
  "score": 94,
  "stats": {
    "characters": 66335,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 176,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 10050,
  },
}
`;

exports[`DOCX golden snapshots > stabilan rezultat: grf-diplomski-neuskladjen.docx 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Calibri (100% analiziranog teksta)",
      "earned": 1,
      "max": 8,
      "status": "fail",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "14 pt",
      "earned": 1,
      "max": 6,
      "status": "fail",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Prored nije eksplicitno zapisan",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1. sekcija: top 4.00 cm · 1. sekcija: right 4.00 cm · 1. sekcija: bottom 4.00 cm · 1. sekcija: left 4.00 cm",
      "earned": 0,
      "max": 6,
      "status": "fail",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "left",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1 sekcija odstupa od A4",
      "earned": 1,
      "max": 3,
      "status": "warn",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "0 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Sadržaj nije pronađen",
      "earned": 0,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Nije prepoznato: intro, conclusion, refs",
      "earned": 1,
      "max": 6,
      "status": "warn",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "FPZG autor–godina: ručna završna provjera potrebna",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Automatizacija citatnog stila",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": null,
      "severity": "info",
      "title": "Djelomično potvrđeni profil",
      "where": "Odabrani profil",
    },
    {
      "category": "formatting",
      "detail": "1. sekcija: top 4.00 cm; 1. sekcija: right 4.00 cm; 1. sekcija: bottom 4.00 cm; 1. sekcija: left 4.00 cm",
      "severity": "warning",
      "title": "Margine nisu jednake očekivanim postavkama",
      "where": "Postavke stranice",
    },
    {
      "category": "citations",
      "detail": "Za stil FPZG autor–godina citatnice i literaturu treba dodatno ručno pregledati.",
      "severity": "info",
      "title": "Odabrani citatni stil nije u potpunosti automatiziran",
      "where": "Citatni profil",
    },
    {
      "category": "formatting",
      "detail": "Pronađen je Calibri, a profil očekuje Times New Roman ili Arial.",
      "severity": "error",
      "title": "Dominantni font ne odgovara profilu",
      "where": "",
    },
    {
      "category": "formatting",
      "detail": "Dominantna veličina je 14 pt; očekivano: 12 pt.",
      "severity": "error",
      "title": "Veličina osnovnog teksta odstupa",
      "where": "",
    },
    {
      "category": "formatting",
      "detail": "Provjeri Page Size / Veličina papira u Wordu.",
      "severity": "warning",
      "title": "Format stranice možda nije A4",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Dodaj automatski sadržaj u Wordu i ažuriraj ga prije predaje.",
      "severity": "error",
      "title": "Nije pronađen sadržaj",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
    {
      "category": "structure",
      "detail": "Nedostaje ili nije jasno naslovljeno: intro, conclusion, refs.",
      "severity": "warning",
      "title": "Nisu prepoznati svi osnovni dijelovi rada",
      "where": "",
    },
  ],
  "profile": "Grafički fakultet, diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "partial",
  "score": 60,
  "stats": {
    "characters": 392,
    "citations": 0,
    "dominantFont": "Calibri",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "14",
    "dominantSpacing": null,
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 0,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 6,
    "references": 0,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 60,
  },
}
`;

exports[`DOCX golden snapshots > stabilan rezultat: mef-doktorski-disertacija.docx 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: font nije potvrđen kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: veličina nije potvrđena kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: prored nije potvrđen kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: brojčane margine nisu potvrđene kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve očitane sekcije koriste A4 ili veličina nije eksplicitno zapisana",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "7 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "FPZG autor–godina: ručna završna provjera potrebna",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Automatizacija citatnog stila",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": null,
      "severity": "info",
      "title": "Djelomično potvrđeni profil",
      "where": "Odabrani profil",
    },
    {
      "category": "citations",
      "detail": "Za stil FPZG autor–godina citatnice i literaturu treba dodatno ručno pregledati.",
      "severity": "info",
      "title": "Odabrani citatni stil nije u potpunosti automatiziran",
      "where": "Citatni profil",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
  ],
  "profile": "Medicinski fakultet, doktorski rad / disertacija",
  "profileFingerprint": null,
  "profileStatus": "partial",
  "score": 93,
  "stats": {
    "characters": 99655,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 7,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 262,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 15097,
  },
}
`;

exports[`DOCX golden snapshots > stabilan rezultat: pmf-matematika-uskladjen.docx 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: font nije potvrđen kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: prored nije potvrđen kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Informativno — ne ulazi u službenu ocjenu. Informativno: brojčane margine nisu potvrđene kao obvezno pravilo za ovaj profil",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve očitane sekcije koriste A4 ili veličina nije eksplicitno zapisana",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Format stranice A4",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "Informativno — ne ulazi u službenu ocjenu. PAGE polje nije pronađeno",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "FPZG autor–godina: ručna završna provjera potrebna",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Automatizacija citatnog stila",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": null,
      "severity": "info",
      "title": "Djelomično potvrđeni profil",
      "where": "Odabrani profil",
    },
    {
      "category": "citations",
      "detail": "Za stil FPZG autor–godina citatnice i literaturu treba dodatno ručno pregledati.",
      "severity": "info",
      "title": "Odabrani citatni stil nije u potpunosti automatiziran",
      "where": "Citatni profil",
    },
  ],
  "profile": "Prirodoslovno-matematicki fakultet (Matematicki odsjek), diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "partial",
  "score": 100,
  "stats": {
    "characters": 46931,
    "citations": 0,
    "dominantFont": "Times New Roman",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 127,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 7110,
  },
}
`;

exports[`DOCX golden snapshots > stabilan rezultat: ttf-diplomski-arial.docx 1`] = `
{
  "checks": [
    {
      "category": "formatting",
      "detail": "Arial (100% analiziranog teksta)",
      "earned": 8,
      "max": 8,
      "status": "pass",
      "title": "Dominantni font",
    },
    {
      "category": "formatting",
      "detail": "12 pt",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Veličina osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "1.50",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Prored osnovnog teksta",
    },
    {
      "category": "formatting",
      "detail": "Sve 1 sekcije približno odgovaraju profilu",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Margine dokumenta",
    },
    {
      "category": "formatting",
      "detail": "both",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Poravnanje osnovnog teksta",
    },
    {
      "category": "structure",
      "detail": "6 naslova prepoznato",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Hijerarhija naslova",
    },
    {
      "category": "structure",
      "detail": "Sadržaj ili TOC polje je pronađeno",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Sadržaj dokumenta",
    },
    {
      "category": "structure",
      "detail": "PAGE polje nije pronađeno",
      "earned": 0,
      "max": 4,
      "status": "pass",
      "title": "Brojevi stranica",
    },
    {
      "category": "structure",
      "detail": "Uvod, zaključak i literatura su prepoznati",
      "earned": 6,
      "max": 6,
      "status": "pass",
      "title": "Osnovni dijelovi rada",
    },
    {
      "category": "structure",
      "detail": "Prepoznati su svi automatizirano provjerljivi dijelovi profila",
      "earned": 7,
      "max": 7,
      "status": "pass",
      "title": "Dijelovi verificiranog profila",
    },
    {
      "category": "structure",
      "detail": "Nisu pronađeni očiti ručno oblikovani naslovi",
      "earned": 4,
      "max": 4,
      "status": "pass",
      "title": "Uporaba Word stilova naslova",
    },
    {
      "category": "citations",
      "detail": "FPZG autor–godina: ručna završna provjera potrebna",
      "earned": 3,
      "max": 3,
      "status": "warn",
      "title": "Automatizacija citatnog stila",
    },
    {
      "category": "citations",
      "detail": "Nisu pronađeni očito nepotpuni zapisi",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Potpunost bibliografskih zapisa",
    },
    {
      "category": "citations",
      "detail": "Odabrani profil ne zahtijeva datum pristupa za svaki URL",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Datumi pristupa mrežnim izvorima",
    },
    {
      "category": "elements",
      "detail": "0 tablica · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi tablica",
    },
    {
      "category": "elements",
      "detail": "0 grafičkih elemenata · 0 prepoznatih naslova",
      "earned": 5,
      "max": 5,
      "status": "pass",
      "title": "Naslovi slika i grafikona",
    },
    {
      "category": "elements",
      "detail": "Nisu pronađene očito neispravne poveznice",
      "earned": 3,
      "max": 3,
      "status": "pass",
      "title": "Oblik poveznica",
    },
    {
      "category": "elements",
      "detail": "Informativno — ne ulazi u službenu ocjenu. 0 praznih odlomaka (0%)",
      "earned": 0,
      "max": 0,
      "status": "pass",
      "title": "Prazni odlomci",
    },
  ],
  "issues": [
    {
      "category": "structure",
      "detail": null,
      "severity": "info",
      "title": "Djelomično potvrđeni profil",
      "where": "Odabrani profil",
    },
    {
      "category": "citations",
      "detail": "Za stil FPZG autor–godina citatnice i literaturu treba dodatno ručno pregledati.",
      "severity": "info",
      "title": "Odabrani citatni stil nije u potpunosti automatiziran",
      "where": "Citatni profil",
    },
    {
      "category": "structure",
      "detail": "Provjeri zaglavlja i podnožja te umetni Word PAGE polje.",
      "severity": "error",
      "title": "Nisu pronađeni automatski brojevi stranica",
      "where": "",
    },
  ],
  "profile": "Tekstilno-tehnološki fakultet, diplomski rad",
  "profileFingerprint": null,
  "profileStatus": "partial",
  "score": 95,
  "stats": {
    "characters": 53267,
    "citations": 0,
    "dominantFont": "Arial",
    "dominantFootnoteFont": null,
    "dominantFootnoteSize": null,
    "dominantFootnoteSpacing": null,
    "dominantSize": "12",
    "dominantSpacing": "1.5",
    "footnoteMarkers": 0,
    "footnoteWords": 0,
    "footnotes": 0,
    "headings": 6,
    "images": 0,
    "officialChars": null,
    "officialWords": null,
    "paragraphs": 143,
    "references": 1,
    "sections": 1,
    "storedPages": null,
    "tables": 0,
    "tocEntries": 0,
    "words": 8070,
  },
}
`;
